fix(next): tsconfig path baseUrl, exclude vite config; adjust layout types and load Tailwind via script tag; pass TypeScript checks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "moduleDetection": "force",
     "allowJs": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
@@ -26,4 +27,8 @@
     "allowImportingTsExtensions": true,
     "noEmit": true
   }
+  ,
+  "exclude": [
+    "vite.config.ts"
+  ]
 }
