--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/genai": "^1.18.0",
     "@supabase/supabase-js": "^2.47.10",
+    "@vercel/analytics": "^1.5.0",
     "next": "^15.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
