--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "node --test tests/*.test.js",
+    "checklist": "GEMINI_FAKE=1 node --test tests/*.test.js",
     "apparels:normalize": "node scripts/normalize-apparels.mjs"
   },
   "dependencies": {
