--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   },
   "dependencies": {
     "@google/genai": "^1.18.0",
+    "@prisma/client": "^5.19.1",
     "@supabase/supabase-js": "^2.47.10",
     "@vercel/analytics": "^1.5.0",
+    "bcryptjs": "^2.4.3",
+    "jose": "^5.9.6",
+    "nodemailer": "^6.9.11",
     "next": "^15.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
@@ -22,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react": "19.1.12",
+    "prisma": "^5.19.1",
     "typescript": "~5.8.2"
   }
 }
