user tables and new login ui

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "real-estate-photo-pro",
+  "name": "tasaweers",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,10 @@
     "start": "next start",
     "test": "node --test tests/*.test.js",
     "checklist": "GEMINI_FAKE=1 node --test tests/*.test.js",
-    "apparels:normalize": "node scripts/normalize-apparels.mjs"
+    "apparels:normalize": "node scripts/normalize-apparels.mjs",
+    "db:push": "prisma db push",
+    "db:seed": "node prisma/seed.mjs",
+    "db:setup": "prisma db push && node prisma/seed.mjs"
   },
   "dependencies": {
     "@google/genai": "^1.18.0",
@@ -18,10 +21,12 @@
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "jose": "^5.9.6",
-    "nodemailer": "^6.9.11",
+    "lucide-react": "^0.468.0",
     "next": "^15.0.0",
+    "nodemailer": "^6.9.11",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "resend": "^6.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
