--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "test": "node --test tests/*.test.js",
     "checklist": "GEMINI_FAKE=1 node --test tests/*.test.js",
